--- a/.htaccess
+++ b/.htaccess
@@ -3,3 +3,5 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 Options +FollowSymlinks -Indexes
 RewriteBase /
+
+RewriteRule ^(.*)$ /index.php?get=$1&%{QUERY_STRING}
